[tool.poetry]
name = "hoster"
version = "0.1.0"
description = "bruh"
authors = ["Antix"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
PyNaCl = "^1.5.0"
Flask = "^2.2.1"
"discord.py-self" = {git = "https://github.com/dolfies/discord.py-self"}
discord = "^2.1.0"
colorama = "^0.4.6"
pypresence = "^4.2.1"
dhooks = "^1.1.4"
websocket = "^0.2.1"
colored = "^1.4.4"
PyYAML = "^6.0"
pyarmor = "^8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
